Messed with directions page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -448,56 +448,56 @@
     </string>
     <string name="back_to_the_map">Back to the Map</string>
     <string name="about">
-        Ribbon Cutting Garden:
+        Ribbon Cutting Garden: 6417 Quail Run Road
         \nTom &amp; Kate Fetzer
     </string>
     <string name="about1">
-        Garden 1:
+        Garden 1: 6315 Old Military Road
         \nJames &amp; Frances Parnell
     </string>
     <string name="about2">
-        Garden 2:
+        Garden 2: 6451 Quail Run Road
         \nDrs. Jeff Warhaftig &amp; Amanda Trimpey
     </string>
     <string name="about3">
-        Garden 3:
+        Garden 3: 300 Airlie Road
         \nAirlie Garden with Lebanon Chapel
     </string>
     <string name="about4">
-        Garden 4:
+        Garden 4: 510 Grace Street
         \nHarbor Way Gardens
     </string>
     <string name="about5">
-        Garden 5:
+        Garden 5: 1710 Chestnut Street
         \nMarcia Pendleton Doering
     </string>
     <string name="about6">
-        Garden 6:
+        Garden 6: 1708 Chestnut Street
         \nDan Thorpe &amp; Anne Beck
     </string>
     <string name="about7">
-        Garden 7:
+        Garden 7: 1711 Princess Street
         \nErin &amp; Dustin RT Sullivan
     </string>
     <string name="about8">
-        Garden 8:
+        Garden 8: 707 Colonial Drive
         \nScotty &amp; Kenton Sanders
     </string>
     <string name="about9">
-        Garden 9:
+        Garden 9: 314 Colonial Drive
         \nKaren &amp; Auley Crouch
     </string>
     <string name="about10">
-        Garden 10:
+        Garden 10: 5024 Split Rail Road
         \nDonna Launey &amp; Patrick Tester
     </string>
     <string name="about11">
-        Garden 11:
+        Garden 11: 6309 Pin Tail Court
         \nA: Chris Gore &amp; Matthew TenHuisen
         \nB: Josephine TenHuisen
     </string>
     <string name="about12">
-        Garden 12:
+        Garden 12: Wrightsville Beach
         \nSusan Wilson
     </string>
     <string name="rc_marker">
