--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -448,15 +448,15 @@
     </string>
     <string name="back_to_the_map">Back to the Map</string>
     <string name="about">
-        Ribbon Cutting Garden: 6417 Quail Run Road
+        Ribbon Cutting Garden: Secret Garden
         \nTom &amp; Kate Fetzer
     </string>
     <string name="about1">
-        Garden 1: 6315 Old Military Road
+        Garden 1: Secret Garden
         \nJames &amp; Frances Parnell
     </string>
     <string name="about2">
-        Garden 2: 6451 Quail Run Road
+        Garden 2: Secret Garden
         \nDrs. Jeff Warhaftig &amp; Amanda Trimpey
     </string>
     <string name="about3">
@@ -464,40 +464,38 @@
         \nAirlie Garden with Lebanon Chapel
     </string>
     <string name="about4">
-        Garden 4: 510 Grace Street
+        Garden 4: Seawater Lane
         \nHarbor Way Gardens
     </string>
     <string name="about5">
-        Garden 5: 1710 Chestnut Street
+        Garden 5: 6309 Pintail Court
         \nMarcia Pendleton Doering
     </string>
     <string name="about6">
-        Garden 6: 1708 Chestnut Street
+        Garden 6: 707 Colonial Drive
         \nDan Thorpe &amp; Anne Beck
     </string>
     <string name="about7">
-        Garden 7: 1711 Princess Street
+        Garden 7: 314 Colonial Drive
         \nErin &amp; Dustin RT Sullivan
     </string>
     <string name="about8">
-        Garden 8: 707 Colonial Drive
+        Garden 8: 1710 Chestnut Street
         \nScotty &amp; Kenton Sanders
     </string>
     <string name="about9">
-        Garden 9: 314 Colonial Drive
+        Garden 9: 1708 Chestnut Street
         \nKaren &amp; Auley Crouch
     </string>
     <string name="about10">
-        Garden 10: 5024 Split Rail Road
+        Garden 10: 1711 Princess Street
         \nDonna Launey &amp; Patrick Tester
     </string>
     <string name="about11">
-        Garden 11: 6309 Pin Tail Court
-        \nA: Chris Gore &amp; Matthew TenHuisen
-        \nB: Josephine TenHuisen
+        Garden 11A/B: 510-512 Grace Street
     </string>
     <string name="about12">
-        Garden 12: Wrightsville Beach
+        Garden 12: 5024 Split Rail Drive
         \nSusan Wilson
     </string>
     <string name="rc_marker">
@@ -769,34 +767,36 @@
         trees given by friends and family are symbolic of this lovingly created home and garden.
     </string>
     <string name="marker_11">
-    This graceful two-story historic house was built in 1907. After the house suffered severe fire
-    damage in 1966, the current homeowners’ recognized an opportunity and bought and completely
-    restored this home themselves. After renovation it was featured in the April 2012 issue of Wilma
-    Magazine. A white picket fence softened with wisteria and roses looks spectacular and welcomes
-    you to the home and garden. Rocking chairs are placed strategically on the front porch to
-    encourage lounging and conversation. Strolling down the left side of the house on repurposed
-    brick pathways is a formal pool on the left with an interesting swan based fountain backed by
-    beautiful star jasmine on a raised picket fence. The path culminates with another striking
-    three-tiered fountain, which cascades into a circular basin. As you cross the back garden there
-    is a majestic Southern Magnolia defining the entrance to the gated pool complex that used to be
-    a gravel parking lot. The salt-water swimming pool is the center of this wonderful entertainment
-    complex. The luxurious cabana was designed and built by the homeowners. Tile from their
-    renovated kitchen was carefully laid out and installed in the bas-relief fountain. The pool deck
-    is filled with tropical containers, a bar and grilling station, seating areas and a fire pit
-    providing a lush paradise for relaxation. This home and garden is always a delight and has been
-    on a previous Azalea Festival Garden Tour along with the Candlelight Christmas Tour.
+        <b>Garden11A: Chris Gore &amp; Matthew TenHuisen</b>
+        \nThis graceful two-story historic house was built in 1907. After the house suffered severe fire
+        damage in 1966, the current homeowners’ recognized an opportunity and bought and completely
+        restored this home themselves. After renovation it was featured in the April 2012 issue of Wilma
+        Magazine. A white picket fence softened with wisteria and roses looks spectacular and welcomes
+        you to the home and garden. Rocking chairs are placed strategically on the front porch to
+        encourage lounging and conversation. Strolling down the left side of the house on repurposed
+        brick pathways is a formal pool on the left with an interesting swan based fountain backed by
+        beautiful star jasmine on a raised picket fence. The path culminates with another striking
+        three-tiered fountain, which cascades into a circular basin. As you cross the back garden there
+        is a majestic Southern Magnolia defining the entrance to the gated pool complex that used to be
+        a gravel parking lot. The salt-water swimming pool is the center of this wonderful entertainment
+        complex. The luxurious cabana was designed and built by the homeowners. Tile from their
+        renovated kitchen was carefully laid out and installed in the bas-relief fountain. The pool deck
+        is filled with tropical containers, a bar and grilling station, seating areas and a fire pit
+        providing a lush paradise for relaxation. This home and garden is always a delight and has been
+        on a previous Azalea Festival Garden Tour along with the Candlelight Christmas Tour.
 
-    \n\nNext door is a Greek Revival Style house originally built for Wilburn Trask, identified with
-    an historic plaque that dates it to 1865. Painted a “sunny” yellow color with a bright blue
-    door, this house has a similar porch with rocking chairs and a glider swing. Whimsical lighting
-    under the painted porch roof adds an extra dose of charm. Two potted ferns sit on the front
-    brick steps and plantings along the street and driveway are lush and beautiful. All of the
-    colorful annuals in the front and side garden are maintained in pots to make them easy to
-    maintain. Tucked into the cozy courtyard is a lovely back porch with rocking chairs and a white
-    glider that overlooks the shady brick patio with its two distinct seating areas. The bench is
-    set at an angle under a large tree with ferns lending a tropical feel, then a charming birdbath
-    and at the end a small dining table under a colorful umbrella. This garden has a big impact and
-    shows how much can be accomplished in a small space with color, design and style.
+        \n\n<b>Garden11B: Josephine TenHuisen</b>
+        \nNext door is a Greek Revival Style house originally built for Wilburn Trask, identified with
+        an historic plaque that dates it to 1865. Painted a “sunny” yellow color with a bright blue
+        door, this house has a similar porch with rocking chairs and a glider swing. Whimsical lighting
+        under the painted porch roof adds an extra dose of charm. Two potted ferns sit on the front
+        brick steps and plantings along the street and driveway are lush and beautiful. All of the
+        colorful annuals in the front and side garden are maintained in pots to make them easy to
+        maintain. Tucked into the cozy courtyard is a lovely back porch with rocking chairs and a white
+        glider that overlooks the shady brick patio with its two distinct seating areas. The bench is
+        set at an angle under a large tree with ferns lending a tropical feel, then a charming birdbath
+        and at the end a small dining table under a colorful umbrella. This garden has a big impact and
+        shows how much can be accomplished in a small space with color, design and style.
     </string>
     <string name="marker_12">
         Trees were always the owner’s first love and this eclectic woodland cottage, dubbed “Flower
